# bitparse

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parse.rs
